# Auction-system

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260223_0001_create_auction_lots_table.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: health.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py
app/margin_engine/: __init__.py  calculator.py  schemas.py
app/models/: __init__.py  auction_lot.py
tests/: test_health.py  test_margin_engine.py
